# BootCamp---Python-17

./: README.md  desafio_query.py  exemplo_01.py  pyproject.toml
